--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,6 +28,7 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">@dimen/card_image_height</item>
         <item name="android:scaleType">centerCrop</item>
+        <item name="android:contentDescription">@string/card_image_desc</item>
     </style>
 
     <!-- Card text views -->
