--- a/app/src/main/res/layout/recipe_card_view.xml
+++ b/app/src/main/res/layout/recipe_card_view.xml
@@ -30,7 +30,7 @@
             <ImageView
                 android:id="@+id/recipe_image_view"
                 style="@style/AppTheme.CardImage"
-                imageResource="@{recipe.imageResource}"
+                imageResource="\@drawable/@{recipe.imageName}"
                 android:contentDescription="@string/card_image_desc"
                 android:transitionName="@string/recipe_image_transition_name" />
 
@@ -43,7 +43,7 @@
             <TextView
                 android:id="@+id/card_ingredients_line_text_view"
                 style="@style/AppTheme.RecipeIngredientsCard"
-                android:text="@{recipe.ingredientsLine}" />
+                android:text="@{recipe.ingredients.toString}" />
 
             <Button
                 android:id="@+id/share_button"
