--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -27,7 +27,7 @@
                 <ImageView
                     android:id="@+id/recipe_image_view"
                     style="@style/AppTheme.CardImage"
-                    imageResource="\@drawable/@{recipe.imageName}"
+                    imageResource="@{recipe.imageResource}"
                     android:transitionName="@string/recipe_image_transition_name" />
 
                 <TextView
@@ -44,17 +44,17 @@
                 <TextView
                     android:id="@+id/recipe_ingredients_text_view"
                     style="@style/AppTheme.NormalText"
-                    android:text="@{recipe.ingredients.toString}" />
+                    android:text="@{recipe.ingredientsList}" />
 
                 <TextView
                     android:id="@+id/how_to_text_view"
                     style="@style/AppTheme.Header"
-                    android:text="@string/how_to" />
+                    android:text="@string/directions" />
 
                 <TextView
                     android:id="@+id/recipe_details_text_view"
                     style="@style/AppTheme.RecipeDetails"
-                    android:text="@{recipe.directions.toString}" />
+                    android:text="@{recipe.directionsList}" />
             </LinearLayout>
 
         </ScrollView>
