--- a/app/src/main/res/layout/recipe_card_view.xml
+++ b/app/src/main/res/layout/recipe_card_view.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="recipe"
-            type="com.example.android.fivewaystocookeggs.Recipe" />
+            type="com.example.android.fivewaystocookeggs.database.model.Recipe" />
         <variable
             name="cardViewOnClickHandler"
             type="android.view.View.OnClickListener" />
